<resources>
    <string name="app_name">SimCity São João</string>
    <string name="descricao_bandeiras">Desenho de bandeirinhas de festa junina nas cores azul, amarelo e rosa</string>
    <string name="texto_descritivo_app">Festa Junina é algo muito bom! E em SimCity não é diferente! Aqui nesse app você consegue organizar a sua lista de compras para a sua festa junina de maneira fácil e simples, é só cadastrar os produtos das suas receitas e se divertir!</string>
    <string name="texto_botao_irParaProdutos">Ir para produtos</string>
    <string name="titulo_activity_produtos">Produtos</string>
    <string name="titulo_activity_detalhes">Detalhes do Produto</string>
    <string name="titulo_activity_valorTotal">Valor Total</string>
    <string name="texto_cadastro_de_produtos">Cadastro de Produtos:</string>
    <string name="hint_nome_do_produto">Nome do produto</string>
    <string name="hint_quantidade_do_produto">Quantidade do produto</string>
    <string name="hint_valor_produto">Valor(unitário) do produto</string>
    <string name="hint_receita">Receita</string>
    <string name="textoBotao_cadastrar_novo_produto">Cadastrar novo produto</string>
    <string name="textoBotao_ver_produtos">Ver produtos</string>
    <string name="textoBotao_valor_total">Valor Total</string>
    <string name="texto_produtos_cadastrados">Produtos Cadastrados</string>
    <string name="descricao_imagem_carrinho">Desenho de um carrinho de supermercado vermelho</string>
    <string name="texto_quantidade">Quantidade:</string>
    <string name="texto_valor_unit">Valor unitário:</string>
    <string name="texto_receita">Receita:</string>
    <string name="texto_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="texto_pacoca">Paçoca</string>
    <string name="texto_20">20</string>
    <string name="texto_RS60">R$60.00</string>
    <string name="descricao_icone_fav">Desenho de coração vermelho</string>
    <string name="toast_cadastrado">Produto Cadastrado com Sucesso!</string>
    <string name="toast_favoritado">Produto favoritado!</string>
    <string name="toast_listaVazia">Não há produtos cadastrados!</string>
</resources>