<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".produtos.fragments.cadastroProdutos.CadastroFragment">

    <TextView
        android:id="@+id/tv_cadastro"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/texto_cadastro_de_produtos"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/tamanho_fonte_16"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_nomeProduto"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/hint_nome_do_produto"
        android:importantForAutofill="no"
        android:inputType="text"
        android:digits="qweéêrtzuúiíoóôõpaáãsdfghjklyxcçvbnmQWEÉÊRTYUÚIÍOÓÔÕPAÁÃSDFGHJKLZXCÇVBNM "
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/tv_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_qtdProduto"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/hint_quantidade_do_produto"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:digits="1234567890"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/et_nomeProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_valorProduto"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/hint_valor_produto"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:digits="1234567890"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/et_qtdProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_receita"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/hint_receita"
        android:importantForAutofill="no"
        android:inputType="text"
        android:digits="qweéêrtzuúiíoóôõpaáãsdfghjklyxcçvbnmQWEÉÊRTYUÚIÍOÓÔÕPAÁÃSDFGHJKLZXCÇVBNM "
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/et_valorProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_cadastrarNovo"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/textoBotao_cadastrar_novo_produto"
        android:textAllCaps="true"
        android:backgroundTint="@color/vermelho"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/et_receita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_verProdutos"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/textoBotao_ver_produtos"
        android:textAllCaps="true"
        android:backgroundTint="@color/verde"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/btn_cadastrarNovo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_valorTotal"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/textoBotao_valor_total"
        android:textAllCaps="true"
        android:backgroundTint="@color/azul_escuro"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/btn_verProdutos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>