<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MainActivity">

    <ImageView
        android:id="@+id/iv_bandeiras"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_96"
        android:src="@drawable/bandeiras"
        android:contentDescription="@string/descricao_bandeiras"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_descritivoApp"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/texto_descritivo_app"
        android:textSize="@dimen/tamanho_fonte_12"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bandeiras" />

    <Button
        android:id="@+id/btn_irParaProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/vermelho"
        android:text="@string/texto_botao_irParaProdutos"
        android:textAllCaps="true"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/tv_descritivoApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>